# command-line-rust

.devcontainer/: bootstrap.sh  devcontainer.json
03_catr/: Cargo.toml
03_catr/src/: lib.rs
03_catr/tests/: cli.rs
04_headr/: Cargo.toml
04_headr/src/: lib.rs  main.rs
04_headr/tests/: cli.rs
05_wcr/: Cargo.toml
05_wcr/src/: lib.rs
06_uniqr/: Cargo.toml  README.md
06_uniqr/src/: error.rs  lib.rs  main.rs
07_findr/: Cargo.toml
07_findr/src/: lib.rs  main.rs
07_findr/tests/: cli.rs
07_findr/tests/inputs/d/: b.csv
